FIxing mobile layout broken

--- a/themes/main/src/sass/main.scss
+++ b/themes/main/src/sass/main.scss
@@ -15,6 +15,10 @@
 body {
   margin: 0;
 
+  & > main {
+    width: 100%;
+  }
+
 
   & > footer {
     color: white;
