--- a/themes/main/src/sass/menu.scss
+++ b/themes/main/src/sass/menu.scss
@@ -10,7 +10,7 @@
 }
 
 #page-header .menu-options{
-  width: 50px;
+  width: 25px;
   right: 0;
   top: 5px;
   cursor: pointer;
